feat: configuração inicial angular 18
- Configurada a estrutura e dependências do projeto.

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
 
     <ul class="navbar-top-links">
       <li class="dropdown" dropdown>
-        <a dropdownToggle (click)="false" title="Usuário conectado" class="info_user">
+        <a dropdownToggle title="Usuário conectado" class="info_user">
           <i class="bi bi-person user-icon"></i>
           <div class="user-name">Nome Usuário</div>
           <i class="bi bi-caret-down-fill dropdown-icon"></i>
@@ -29,7 +29,7 @@
             </a>
           </li>
         </ul>
-      </li>2
+      </li>
     </ul>
   </div>
 </nav>
