--- a/src/app/modules/example/components/example-list/example-list.component.html
+++ b/src/app/modules/example/components/example-list/example-list.component.html
@@ -27,7 +27,12 @@
           </td>
           <td>{{ item.area | number }}</td>
           <td>{{ item.population | number }}</td>
-          <td></td>
+          <td>
+            <div class="btn-action">
+              <a routerLink="/exemplo/{{item.id}}"><i class="bi bi-pencil-square" tooltip="Editar" placement="bottom"></i></a>
+              <button class="delete" (click)="confirmDelete(item.id)"><i class="bi bi-trash" tooltip="Excluir" placement="bottom"></i></button>
+            </div>
+          </td>
         </tr>
         }
         <tr *ngIf="!entity?.length" class="border-b-radius">
