--- a/src/app/modules/example/components/example-edit/example-edit.component.html
+++ b/src/app/modules/example/components/example-edit/example-edit.component.html
@@ -9,7 +9,7 @@
   <form [formGroup]="form" (ngSubmit)="salvar()">
     <div class="form-group row mb-3">
       <div class="col-sm-12 col-xl-8">
-        <label class="col-sm-12 pb-1">Nome</label>
+        <label for="name" class="col-sm-12 pb-1">Nome</label>
         <textarea id="name" class="form-control" rows="2" formControlName="name" placeholder="Nome" maxlength="200"></textarea>
         <app-field-message [field]="fieldMessageRequired('name')" [erros]="fieldErros('name')"></app-field-message>
       </div>
@@ -17,7 +17,7 @@
 
     <div class="form-group row mb-3">
       <div class="col-sm-12 col-xl-8">
-        <label class="col-sm-12 pb-1">Área</label>
+        <label for="area" class="col-sm-12 pb-1">Área</label>
         <input id="area" class="form-control" formControlName="area" placeholder="Área" />
         <app-field-message [field]="fieldMessageRequired('area')" [erros]="fieldErros('area')"></app-field-message>
       </div>
@@ -25,7 +25,7 @@
 
     <div class="form-group row mb-3">
       <div class="col-sm-12 col-xl-8">
-        <label class="col-sm-12 pb-1">População</label>
+        <label for="population" class="col-sm-12 pb-1">População</label>
         <input id="population" class="form-control" formControlName="population" placeholder="Número da População" />
         <app-field-message [field]="fieldMessageRequired('population')" [erros]="fieldErros('population')"></app-field-message>
       </div>
@@ -33,7 +33,7 @@
 
     <div class="form-group row mb-3">
       <div class="col-sm-4">
-        <label class="col-sm-12 pb-1">Continente</label>
+        <label for="continent" class="col-sm-12 pb-1">Continente</label>
         <ng-select id="continent" class="ng-select-alternative" [items]="list" bindLabel="label" bindValue="id" placeholder="Selecione" formControlName="continent">
         </ng-select>
         <app-field-message [field]="fieldMessageRequired('continent')" [erros]="fieldErros('continent')"></app-field-message>
@@ -42,7 +42,7 @@
 
     <div class="form-group row d-flex justify-content-end">
       <div class="col-sm-8 col-sm-offset-2 d-flex justify-content-end">
-        <button class="btn btn-white me-2" type="button">Voltar</button>
+        <button class="btn btn-white me-2" type="button" routerLink="/exemplo">Voltar</button>
         <button class="btn btn-primary" type="submit">Salvar</button>
       </div>
     </div>    
