--- a/src/assets/styles/imports/_custon.scss
+++ b/src/assets/styles/imports/_custon.scss
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
 
-  .new-item{
+  .new-item {
     width: auto;
   }
 
@@ -14,6 +14,7 @@
     font-size: 1.5em;
     color: $primaryColor;
     font-weight: 400;
+    margin-right: 16px;
   }
 
   h3 {
