feat: configuração inicial angular 18
Implementado autenticação com o SOEAuth.

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
             </a>
           </li>
           <li>
-            <a class="dropdown-item" [routerLink]="['/logout']" routerLinkActive="router-link-active" >
+            <a class="dropdown-item" (click)="logout()">
               <i class="bi bi-box-arrow-right"></i> Sair
             </a>
           </li>
