--- a/src/assets/styles/imports/_variables.scss
+++ b/src/assets/styles/imports/_variables.scss
@@ -1,5 +1,5 @@
 // Basic Colors
-$primaryColor: #7581a3; // Primary color
+$primaryColor: #41999c; // Primary color
 $defaultColor: #F2F2F2; // Default color
 $successColor: #1c84c6; // Success color
 $infoColor: #23c6c8; // Info color
