--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -13,6 +13,7 @@
 @import 'imports/custon';
 @import 'imports/buttons';
 @import 'imports/navbar';
+@import 'imports/navigation';
 @import 'imports/table';
 @import 'imports/forms';
 @import 'imports/loading';
