--- a/src/app/core/layouts/login/login.component.scss
+++ b/src/app/core/layouts/login/login.component.scss
@@ -17,15 +17,40 @@
   .login-content {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
+    height: 100%;
 
     .login-box {
-      margin: 60px auto;
+      margin: 0px auto;
       max-width: 500px;
       width: 90%;
       border-radius: 12px;
       background-color: #f1f1f1;
       box-shadow: 0px 1px 3px rgba(54, 54, 54, 0.3);
+
+      .content-soe{
+        width: 100%;
+        margin: 40px auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        button{
+          width: 300px;
+          padding: 1em;
+          border: 0;
+          box-shadow: 0px 1px 3px rgba(54, 54, 54, 0.3);
+          border-radius: 20px;
+
+          img{
+            max-width: 150px;
+            width: 90%;
+            height: auto;
+          }
+
+        }
+      }
     }
   }
 }
