--- a/src/assets/styles/imports/_navbar.scss
+++ b/src/assets/styles/imports/_navbar.scss
@@ -14,7 +14,7 @@
 
   .navbar-brand {
     font-size: 1.5em;
-    color: #7581a3;
+    color: $primaryColor;
     margin: 0 0 0 20px;
   }
 
@@ -23,7 +23,7 @@
     border: 0;
 
     i {
-      color: #7581a3;
+      color: $primaryColor;
       font-size: 1.8em;
     }
   }
@@ -60,7 +60,7 @@
         .dropdown-icon {
           margin: 4px 0 0 4px;
           font-size: 12px;
-          color: #7581a3;
+          color: $primaryColor;
         }
 
         @media (max-width: 500px) {
@@ -72,7 +72,7 @@
         .user-icon {
           font-size: 20px;
           margin-right: 4px;
-          color: #7581a3;
+          color: $primaryColor;
         }
       }
     }
