refactor: altera nome dos componentes

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -34,5 +34,5 @@
   </div>
 </nav>
 <div class="nav-width"></div>
-<!-- Left navigation bar -->
-<app-navigation [menuActived]="menuActived"></app-navigation>
+<!-- Left menu bar -->
+<app-menu [menuActived]="menuActived"></app-menu>
