--- a/src/app/modules/exemplo/components/exemplo-list/exemplo-list.component.html
+++ b/src/app/modules/exemplo/components/exemplo-list/exemplo-list.component.html
@@ -8,10 +8,10 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th>#</th>
-          <th>Country</th>
-          <th>Area</th>
-          <th>Population</th>
+          <th>Matrícula</th>
+          <th>Aluno(a)</th>
+          <th>Curso</th>
+          <th>Ano</th>
           <th></th>
         </tr>
       </thead>
@@ -19,14 +19,14 @@
         @for (item of entity | paginate: {
         itemsPerPage: pagination.itemsPerPage,
         currentPage: pagination.currentPage,
-        totalItems: entity.length}; track item.name; let i = $index) {
+        totalItems: entity.length}; track item.matricula; let i = $index) {
         <tr>
-          <th scope="row">{{ i + 1 }}</th>
+          <th>{{ item.matricula }}</th>
           <td>
-            {{ item.name }}
+            {{ item.nome }}
           </td>
-          <td>{{ item.area | number }}</td>
-          <td>{{ item.population | number }}</td>
+          <td>{{ item.curso | ExemploPipe }}</td>
+          <td>{{ item.ano | number }}</td>
           <td>
             <div class="btn-action">
               <a routerLink="/exemplo/{{item.id}}"><i class="bi bi-pencil-square" tooltip="Editar" placement="bottom"></i></a>
