--- a/src/app/modules/exemplo/components/exemplo-list/exemplo-list.component.html
+++ b/src/app/modules/exemplo/components/exemplo-list/exemplo-list.component.html
@@ -19,7 +19,7 @@
         @for (item of entity | paginate: {
         itemsPerPage: pagination.itemsPerPage,
         currentPage: pagination.currentPage,
-        totalItems: entity.length}; track item.matricula; let i = $index) {
+        totalItems: entity.length}; track $index; let i = $index) {
         <tr>
           <th>{{ item.matricula }}</th>
           <td>
