--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -14,9 +14,11 @@
 @import 'imports/buttons';
 @import 'imports/navbar';
 @import 'imports/navigation';
+@import 'imports/ng-datepicker';
 @import 'imports/table';
 @import 'imports/forms';
 @import 'imports/loading';
+
 
 
 * {
