--- a/src/app/modules/exemplo/components/exemplo-list/exemplo-list.component.html
+++ b/src/app/modules/exemplo/components/exemplo-list/exemplo-list.component.html
@@ -1,6 +1,6 @@
 <section class="section-title">
   <h2>Exemplo de Lista</h2>
-  <a class="btn btn-primary new-item" [routerLink]="['/exemplo/adicionar']">Novo</a>
+  <a class="btn btn-primary new-item" [routerLink]="['/exemplo/formulario/adicionar']">Novo</a>
 </section>
 
 <section class="section-list">
@@ -19,7 +19,7 @@
         @for (item of entity | paginate: {
         itemsPerPage: pagination.itemsPerPage,
         currentPage: pagination.currentPage,
-        totalItems: entity.length}; track item.matricula; let i = $index) {
+        totalItems: entity.length}; track item; let i = $index) {
         <tr>
           <th>{{ item.matricula }}</th>
           <td>
@@ -29,7 +29,7 @@
           <td>{{ item.ano | number }}</td>
           <td>
             <div class="btn-action">
-              <a routerLink="/exemplo/{{item.id}}"><i class="bi bi-pencil-square" tooltip="Editar" placement="bottom"></i></a>
+              <a routerLink="/exemplo/formulario/{{item.id}}"><i class="bi bi-pencil-square" tooltip="Editar" placement="bottom"></i></a>
               <button class="delete" (click)="confirmDelete(item.id)"><i class="bi bi-trash" tooltip="Excluir" placement="bottom"></i></button>
             </div>
           </td>
