feat: adicionado componente de exemplo do Google Maps

--- a/src/app/core/components/menu/menu.component.html
+++ b/src/app/core/components/menu/menu.component.html
@@ -17,6 +17,7 @@
         <li class="second-link"><a [routerLink]="['/exemplo/formulario']" [ngClass]="{'active': activeRoute('/exemplo/formulario')}">Formulário</a></li>
         <li class="second-link"><a [routerLink]="['/exemplo/grafico']" [ngClass]="{'active': activeRoute('/exemplo/grafico')}">Gráfico</a></li>
         <li class="second-link"><a [routerLink]="['/exemplo/lista']" [ngClass]="{'active': activeRoute('/exemplo/lista')}">Lista</a></li>
+        <li class="second-link"><a [routerLink]="['/exemplo/mapa']" [ngClass]="{'active': activeRoute('/exemplo/mapa')}">Mapa</a></li>
         <li class="second-link"><a [routerLink]="['/exemplo/modal']" [ngClass]="{'active': activeRoute('/exemplo/modal')}">Modal</a></li>
       </ul>
     </li>
