--- a/src/app/modules/exemplo/components/exemplo-list/exemplo-list.component.html
+++ b/src/app/modules/exemplo/components/exemplo-list/exemplo-list.component.html
@@ -26,7 +26,7 @@
             {{ item.nome }}
           </td>
           <td>{{ item.curso | ExemploPipe }}</td>
-          <td>{{ item.ano | number }}</td>
+          <td>{{ item.ano }}</td>
           <td>
             <div class="btn-action">
               <a routerLink="/exemplo/formulario/{{item.id}}"><i class="bi bi-pencil-square" tooltip="Editar" placement="bottom"></i></a>
