fix: ajustes testes unitários

--- a/src/app/core/layouts/login/login.component.html
+++ b/src/app/core/layouts/login/login.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="content-soe">
         <button type="button" (click)="login()">
-          <img src="../../../../assets/images/marca_SOE.png" class="marca-soe" />
+          <img src="../../../../assets/images/marca_SOE.png" class="marca-soe" alt="SOE"/>
 
           <p><i>Identifique-se para entrar</i></p>
         </button>
