--- a/src/app/modules/exemplo/components/exemplo-list/exemplo-list.component.html
+++ b/src/app/modules/exemplo/components/exemplo-list/exemplo-list.component.html
@@ -5,13 +5,13 @@
 
 <section class="section-list">
   <div class="table-conteiner">
-    <table class="table table-striped">
+    <table aria-describedby="table-list" class="table table-striped">
       <thead>
         <tr>
-          <th>Matrícula</th>
-          <th>Aluno(a)</th>
-          <th>Curso</th>
-          <th></th>
+          <th scope="col">Matrícula</th>
+          <th scope="col">Aluno(a)</th>
+          <th scope="col">Curso</th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
