fix: retoma test sonar

--- a/jest-coverage/lcov-report/app/modules/exemplo/components/exemplo-list/exemplo-list.component.ts.html
+++ b/jest-coverage/lcov-report/app/modules/exemplo/components/exemplo-list/exemplo-list.component.ts.html
@@ -149,21 +149,7 @@
 <a name='L84'></a><a href='#L84'>84</a>
 <a name='L85'></a><a href='#L85'>85</a>
 <a name='L86'></a><a href='#L86'>86</a>
-<a name='L87'></a><a href='#L87'>87</a>
-<a name='L88'></a><a href='#L88'>88</a>
-<a name='L89'></a><a href='#L89'>89</a>
-<a name='L90'></a><a href='#L90'>90</a>
-<a name='L91'></a><a href='#L91'>91</a>
-<a name='L92'></a><a href='#L92'>92</a>
-<a name='L93'></a><a href='#L93'>93</a>
-<a name='L94'></a><a href='#L94'>94</a>
-<a name='L95'></a><a href='#L95'>95</a>
-<a name='L96'></a><a href='#L96'>96</a>
-<a name='L97'></a><a href='#L97'>97</a>
-<a name='L98'></a><a href='#L98'>98</a>
-<a name='L99'></a><a href='#L99'>99</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
+<a name='L87'></a><a href='#L87'>87</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">2x</span>
 <span class="cline-any cline-yes">2x</span>
 <span class="cline-any cline-yes">2x</span>
 <span class="cline-any cline-yes">2x</span>
@@ -172,13 +158,8 @@
 <span class="cline-any cline-yes">2x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
+<span class="cline-any cline-yes">2x</span>
+<span class="cline-any cline-yes">2x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
@@ -190,10 +171,10 @@
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-yes">5x</span>
+<span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-yes">5x</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
@@ -205,11 +186,6 @@
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
-<span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-neutral">&nbsp;</span>
 <span class="cline-any cline-no">&nbsp;</span>
@@ -262,37 +238,30 @@
 <span class="cline-any cline-neutral">&nbsp;</span></td><td class="text"><pre class="prettyprint lang-js">import { CommonModule, DecimalPipe } from '@angular/common';
 import { Component, OnInit } from '@angular/core';
 import { RouterModule } from '@angular/router';
-import { TooltipModule } from 'ngx-bootstrap/tooltip';
+import { TooltipModule } from "ngx-bootstrap/tooltip";
 import { NgxPaginationModule } from 'ngx-pagination';
 import { BaseListComponent } from '../../../../core/base/base-list.component';
 import { PaginationComponent } from '../../../../shared/components/pagination/pagination.component';
-import { ExemploPipe } from '../../../../shared/pipes/exemplo.pipe';
-import { EventSharedService } from '../../../../shared/services/event-shared.service';
 import { Exemplo } from '../../models/exemplo.model';
 import { ExemploService } from '../../services/exemplo.service';
+import { ExemploPipe } from '../../../../shared/pipes/exemplo.pipe';
+import { EventSharedService } from '../../../../shared/services/event-shared.service';
 &nbsp;
 @Component({
   selector: 'app-exemplo-list',
   standalone: true,
-  imports: [
-    CommonModule,
-    RouterModule,
-    DecimalPipe,
-    NgxPaginationModule,
-    PaginationComponent,
-    TooltipModule,
-    ExemploPipe,
-  ],
+  imports: [CommonModule, RouterModule, DecimalPipe, NgxPaginationModule, PaginationComponent, TooltipModule, ExemploPipe],
   providers: [ExemploService],
   templateUrl: './exemplo-list.component.html',
   styleUrl: './exemplo-list.component.scss',
 })
-export class ExemploListComponent
-  extends BaseListComponent&lt;Exemplo&gt;
-  implements OnInit
-{
-  constructor(private exemploService: ExemploService) {
-    super();
+&nbsp;
+export class ExemploListComponent extends BaseListComponent&lt;Exemplo&gt; implements OnInit {
+&nbsp;
+  constructor(
+    private exemploService: ExemploService,
+  ) {
+    super()
   }
 &nbsp;
   ngOnInit(): void {
@@ -303,33 +272,28 @@ export class ExemploListComponent
 <span class="fstat-no" title="function not covered" >  initList(</span>) {
 <span class="cstat-no" title="statement not covered" >    this.loading();</span>
 <span class="cstat-no" title="statement not covered" >    this.addSub(</span>
-      this.exemploService
-        .getListPaginate(
-          this.pagination.currentPage,
-          this.pagination.itemsPerPage
-        )
-        .subscribe({
-          next: <span class="fstat-no" title="function not covered" >(r</span>es) =&gt; {
-<span class="cstat-no" title="statement not covered" >            this.entity = res.data;</span>
-<span class="cstat-no" title="statement not covered" >            this.pagination.currentPage = res.page;</span>
-<span class="cstat-no" title="statement not covered" >            this.pagination.itemsPerPage = res.pageSize;</span>
-<span class="cstat-no" title="statement not covered" >            this.pagination.totalItems = res.total;</span>
-<span class="cstat-no" title="statement not covered" >            this.loaded();</span>
-          },
-          error: <span class="fstat-no" title="function not covered" >(e</span>rror) =&gt; {
-<span class="cstat-no" title="statement not covered" >            this.handleError(error);</span>
-          },
-        })
-    );
+      this.exemploService.getListPaginate(this.pagination.currentPage, this.pagination.itemsPerPage).subscribe({
+        next: <span class="fstat-no" title="function not covered" >(r</span>es) =&gt; {
+<span class="cstat-no" title="statement not covered" >          this.entity = res.data;</span>
+<span class="cstat-no" title="statement not covered" >          this.pagination.currentPage = res.page;</span>
+<span class="cstat-no" title="statement not covered" >          this.pagination.itemsPerPage = res.pageSize;</span>
+<span class="cstat-no" title="statement not covered" >          this.pagination.totalItems = res.total;</span>
+<span class="cstat-no" title="statement not covered" >          this.loaded();</span>
+        },
+        error: <span class="fstat-no" title="function not covered" >(e</span>rror) =&gt; {
+<span class="cstat-no" title="statement not covered" >          this.handleError(error);</span>
+        }
+      })
+    )
   }
 &nbsp;
   onChangePage() {
     this.addSub(
       EventSharedService.get('loadList').subscribe((page: number) =&gt; {
         this.pagination.currentPage = page;
-        this.initList();
+        this.initList()
       })
-    );
+    )
   }
 &nbsp;
   confirmDelete(id: number | undefined) {
@@ -353,18 +317,18 @@ export class ExemploListComponent
       },
       error: <span class="fstat-no" title="function not covered" >(e</span>rror) =&gt; {
 <span class="cstat-no" title="statement not covered" >        this.handleError(error);</span>
-      },
+      }
     });
   }
-}
-&nbsp;</pre></td></tr></table></pre>
+&nbsp;
+}</pre></td></tr></table></pre>
 
                 <div class='push'></div><!-- for sticky footer -->
             </div><!-- /wrapper -->
             <div class='footer quiet pad2 space-top1 center small'>
                 Code coverage generated by
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
-                at 2024-12-11T19:16:43.487Z
+                at 2024-12-12T12:50:52.612Z
             </div>
         <script src="../../../../../prettify.js"></script>
         <script>
