--- a/src/app/modules/exemplo/components/mapa/mapa.component.html
+++ b/src/app/modules/exemplo/components/mapa/mapa.component.html
@@ -13,3 +13,16 @@
 <div class="endereco">
   {{enderecoHTML}}
 </div>
+
+<div class="apisContainer">
+  <p>APIs disponibilizadas para utilização na empresa:</p>
+  <div class="container apiList">
+    <div class="row">
+      @for(item of apiList; track item.id){
+        <div class="column col-sm-4 col-xs-12">
+          <a href="https://developers.google.com/maps/documentation/{{item.link}}" target="_blank">{{item.name}}</a>
+        </div>
+      }
+    </div>
+  </div>
+</div>
