--- a/src/app/modules/exemplo/components/mapa/mapa.component.scss
+++ b/src/app/modules/exemplo/components/mapa/mapa.component.scss
@@ -9,3 +9,28 @@
   font-size: 18px;
   line-height: 24px;
 }
+
+.apisContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #818486;
+ 
+  p {
+    font-weight: 600;
+  }
+}
+ 
+.apiList {
+  justify-content: space-between;
+  text-align: center;
+}
+ 
+.column {
+  padding: 8px;
+ 
+  a {
+    color: #41999C;
+  }
+}
